--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.26",
+    "apexcharts": "^3.35.5",
     "axios": "^0.27.2",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-charts": "^2.0.0-beta.7",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
